bk_ida/gccida/g1/get_narrower
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_narrower/src/tree.c:4706:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_narrower/src/tree.c:4708:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_narrower/src/tree.c:4758:22: error: expected expression
v11 = *( tree_node **)( elements->int_cst.int_cst.high + 40); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_narrower/src/tree.c:4758:10: error: use of undeclared identifier 'tree_node'
v11 = *( tree_node **)( elements->int_cst.int_cst.high + 40); 
         ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_narrower/src/obj/tree.o] Error 1
